# supernote-sync

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
snsync/: __main__.py  config.py  service.py  supernote.py  sync.py
tests/: test_config.py
